recursion.logo.tree.Tree.scala.error
Erreur de compilation :
Tree:21: error: not found: value steps
  arbre(steps-1,shrink*length,angle,shrink)
        ^