recursion.logo.tree.Tree.scala.code
def tree(steps:Int, length:Double, angle:Double, shrink:Double)    {
  if (steps==0){}

  else{
    baisseCrayon()
    avance(length)
    droite(angle)
    current(steps)
    arbre(3,length,angle,shrink)
    recule(length)
    gauche(2*length)
    tree(steps-1,shrink*length,angle,shrink)

  }
}

def arbre(step:Int,length:Double,angle:Double,shrink:Double){
  if (step!=0){
  avance(length)
  droite(angle)
  arbre(steps-1,shrink*length,angle,shrink)
  recule(length)
  gauche(2*angle)
  }
}